    internal border - optins are now none, light, 3d
14. Move Qt4.5 scrollbars closer to scrollview when they are lpaced on the outside.
15. Provide icon mapping for pure-Qt apps, as well as KDE ones, if QtCurve is
    compiled against KDE.
16. Fix shading of menuitems when slider is set to 'orig selected'
17. Map more KDE4 icons.

0.61.5
------
1. Try to prevent toolbar button text being clipped.

0.61.4
------
1. Fix settings for sliderThumbs, handles, toolbarSeparators, and splitters.
2. Fix separators on vertical toolbars.
3. Fix chopped off text on tabs with icons, but no close button (Qt<4.5)
4. Use faded lines for combo separator.

0.61.3
------
1. Fix compilation with Qt4.5
2. Fix tab label shift under Qt4.5

0.61.2
------
1. Fix setting of options if no qtcurvestylerc is found!
2. Respect the "Raised" flag of toolbuttons - fixes missing border of
   disabled buttons in QJackCtl.
3. Fix text in Arora (Qt4.5) tabs.
4. Fix border of tabs.

0.61.1
------
1. Fix setting of default style. Fixes odd behaviour of config dialog!
2. Fix position of dark part of sunken lines.
3. Fix scrollbar groove when squared and using flat scrollbar buttons.
4. Fix kontact crash due to tracking mouse events on frames containing
   scrollviews.
5. Read in custom gradients and shades from any system config file.

0.61
----
 1. Only draw coloured border for moused-over items if they are enabled!
 2. Fix squred off corner in KTabWidgets when tabs are hidden.
 3. Fix corners of sunken Q3ScrollViews.
 4. Draw a sunken border around KPopupMenu titles.
 5. Draw toolbar arrows after icon, so that they do not get covered by
    the icon.
 6. Fix some weird alignment problems with KDE4 HIG.
 7. Fix default margin settings - these were too small.
 8. Add option to draw line after frameless groupbox title.
 9. Add option to use faded lines (toolbar separators, menutitem separators,
    etc.)
10. Support QLabel buddy widgets, as per KStyle.